# mogul.manager

./: .dockerignore  .env.example  README.md  config.py  database.py  docker-compose.yml  main.py  pyproject.toml
agents/: __init__.py  deepseek.py  memory_extractor.py  planner.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
models/: __init__.py  activity.py  attachments.py  base.py  chat.py  collaboration.py  comments.py  dependencies.py  documents.py  memory.py  milestones.py  notifications.py  plans.py  projects.py  tags.py  tasks.py  templates.py  users.py  workspaces.py
routes/: activity.py  attachments.py  chat.py  comments.py  dependencies.py  documents.py  memory.py  notifications.py  plans.py  projects.py  reports.py  tasks.py  templates.py  users.py  workspaces.py
schemas/: activity.py  attachments.py  bulk.py  chat.py  comments.py  dependencies.py  documents.py  memory.py  milestones.py  notifications.py  plans.py  reports.py  tags.py  tasks.py  templates.py  users.py  workspaces.py
services/: activity.py  attachments.py  auth.py  chat.py  chunker.py  context_builder.py  documents.py  embeddings.py  memory.py  milestones.py  notifications.py  plans.py  rag.py  reports.py  tags.py  tasks.py  templates.py  text_extractor.py  workspaces.py
templates/: invite_email.html  notification_email.html  password_reset.html  task_assigned.html
tools/: __init__.py  document_tools.py  memory_tools.py  plan_tools.py  project_tools.py  search_tools.py  task_tools.py  workspace_tools.py
utils/: email.py  uuid.py  (+2 more)
(+164 files in other folders)
