[project]
name = "memory-driven-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosmtplib>=5.1.0",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "boto3>=1.43.2",
    "fastapi[standard]>=0.136.1",
    "fastembed>=0.3.0",
    "greenlet>=3.5.0",
    "pdfplumber>=0.11.0",
    "pgvector>=0.3.0",
    "pillow>=12.2.0",
    "psycopg[binary]>=3.3.3",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.0",
    "openai>=1.0.0",
    "python-docx>=1.1.0",
    "pyjwt>=2.12.1",
    "sqlalchemy>=2.0.49",
]

[project.optional-dependencies]
ocr = [
    "pytesseract>=0.3.10",
    "pdf2image>=1.17.0",
]
